--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,1 +1,14 @@
-<p>game works!</p>
+<div>
+  <p>¡Hola, {{ playerName }}!</p>
+  <p>Puntuación: {{ playerScore }}</p>
+
+  <button (click)="makeSelection('rock')">Piedra</button>
+  <button (click)="makeSelection('paper')">Papel</button>
+  <button (click)="makeSelection('scissors')">Tijeras</button>
+
+  <p>La máquina seleccionó: {{ machineSelection }}</p>
+  <p>Resultado: {{ result }}</p>
+
+  <button (click)="exitGame()">Salir</button>
+</div>
+
